# soda-framework

./: .gitignore  .rules.md  BOOTSTRAP.md  PROJECT_CHARTER.md  README.md  docker-compose.soda.yml  ops  package-lock.json  requirements.txt
.agent/: AGENTS.md  SODA_CORE_MANIFESTO.md  ag-kit-manifest.json  pyproject.toml
.agent/agents/personas/: architect.md  auditor.md  coder.md  orchestrator.md  product_manager.md
.agent/config/: docker-compose.yaml  mcp_catalog.json  mcp_server_config.json  soda_core.yaml
.agent/config/docker-mcp/: docker-compose.yml
.agent/memory/hot/: task_plan.md
.agent/rules/fragments/: 00_identity.md  10_law.md
.agent/scripts/: check_ollama.py  crystal.py  mcp_manager.py  memory_manager.py  ralph_loop.py  ruler.py  setup_tools.sh  test_mcp_gateway.py  update_deps.sh
.agent/scripts/tests/: test_model_discovery.py  test_suma.py
.agent/services/browser/: Dockerfile
.agent/skills/planning-with-files/: SKILL.md
.agent/sops/v3/: TEMPLATE_v1.3.yaml
.agent/sops/v3/specs/: SOP-000_Sync_Protocol_v1.0.md  SOP-000_Sync_Protocol_v1.0.yaml  SOP-001_Discovery_v1.0.md  SOP-001_Discovery_v1.0.yaml  SOP-101_Strategy_v1.0.md  SOP-101_Strategy_v1.0.yaml  SOP-201_ProdDef_v1.0.md  SOP-201_ProdDef_v1.0.yaml  SOP-301_UXWriting_v1.0.md  SOP-301_UXWriting_v1.0.yaml  SOP-302_DesignSystem_v1.0.md  SOP-302_DesignSystem_v1.0.yaml  SOP-401_TechArch_v1.0.md  SOP-401_TechArch_v1.0.yaml  SOP-403_ThreatModel_v1.0.md  SOP-403_ThreatModel_v1.0.yaml  (+12 more)
.agent/templates/: sop_schema.yaml
.agent/workflows/: 00_validate_setup.md  brainstorm.md  plan.md
(+23 files in other folders)
